# slotflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_extract_single_slot.py  02_sequential_flow.py  03_freeform_flow.py  04_steps_flow.py  README.md
slotflow/: __init__.py  extractor.py  flow.py  judge.py  llm.py  question_generator.py  runner.py  schema.py  slot.py
tests/: fakes.py  test_extractor.py  test_flow.py  test_runner.py  test_schema.py
